force-app/main/default/objects/Participant__c/Participant__c.object-meta.xml
<CustomObject>
    <label>Participants Enrollee</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants - Enrollee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>