force-app/main/default/objects/Participant__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Addressee</label>
    <type>Checkbox</type>
</CustomField>