force-app/main/default/objects/Participant__c/fields/Age_f__c.field-meta.xml
<CustomField>
    <fullName>Age_f__c</fullName>
    <formula>FLOOR((Letter_Date__c-Date_of_Birth__c +1 )/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>