force-app/main/default/objects/Participant__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Individual</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>