force-app/main/default/objects/Participant__c/fields/Created_By_MDIRO__c.field-meta.xml
<CustomField>
    <fullName>Created_By_MDIRO__c</fullName>
    <label>Created By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>