force-app/main/default/objects/Participant__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipName>Participants_Enrollee</relationshipName>
    <type>Lookup</type>
</CustomField>