force-app/main/default/objects/Participant__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>MCO</fullName>
            </value>
            <value>
                <fullName>Provider Representative</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>Health Plan</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>