force-app/main/default/objects/Participant__c/fields/Insurance_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurance_ID__c</fullName>
    <label>Insurance  ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>