force-app/main/default/objects/Participant__c/fields/Letter_Date__c.field-meta.xml
<CustomField>
    <fullName>Letter_Date__c</fullName>
    <formula>Case__r.Letter_Date__c</formula>
    <label>Letter Date</label>
    <type>Date</type>
</CustomField>