force-app/main/default/objects/Participant__c/fields/Lower_case_Gender__c.field-meta.xml
<CustomField>
    <fullName>Lower_case_Gender__c</fullName>
    <formula>If (Text( Gender__c)= &apos;Male&apos;, &quot;male&quot;, IF(Text( Gender__c)= &apos;Female&apos;, &quot;female&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lower case Gender</label>
    <type>Text</type>
</CustomField>