force-app/main/default/objects/Participant__c/fields/Panel_Review__c.field-meta.xml
<CustomField>
    <fullName>Panel_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel Review</label>
    <referenceTo>Panel_Review__c</referenceTo>
    <relationshipLabel>Participants - Enrollee</relationshipLabel>
    <relationshipName>Participants_Enrollee</relationshipName>
    <type>Lookup</type>
</CustomField>