force-app/main/default/objects/Participant__c/fields/Participant_Enrollee_Type__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollee_Type__c</fullName>
    <label>Individual Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requestor</fullName>
            </value>
            <value>
                <fullName>Claimant</fullName>
            </value>
            <value>
                <fullName>Subscriber</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
                <isActive>false</isActive>
                <label>Law Firm</label>
            </value>
            <value>
                <fullName>Member</fullName>
                <isActive>false</isActive>
                <label>Member</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Representative</fullName>
                <isActive>false</isActive>
                <label>Representative</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>