force-app/main/default/objects/Participant__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <label>Provider Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>