force-app/main/default/objects/Participant__c/fields/Secondary_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Name__c</fullName>
    <label>Secondary Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>