force-app/main/default/objects/Participant__c/fields/Send_Billing_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Billing_To__c</fullName>
    <formula>IF(INCLUDES( Case__r.Account.Send_Billing_To__c , &quot;Enrollee&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Billing To</label>
    <type>Checkbox</type>
</CustomField>