force-app/main/default/objects/Participant__c/fields/Status_He_she__c.field-meta.xml
<CustomField>
    <fullName>Status_He_she__c</fullName>
    <formula>IF(TEXT(Participant_Enrollee_Type__c) = &quot;Member&quot; &amp;&amp; TEXT(Gender__c) = &quot;Female&quot;, &quot;she&quot;, IF(TEXT (Participant_Enrollee_Type__c) = &quot;Member&quot; &amp;&amp; TEXT(Gender__c) = &quot;Male&quot;, &quot;he&quot;, &quot;he/she&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status He/she</label>
    <type>Text</type>
</CustomField>