force-app/main/default/objects/Participant__c/fields/Status_his_her__c.field-meta.xml
<CustomField>
    <fullName>Status_his_her__c</fullName>
    <formula>IF(TEXT(Participant_Enrollee_Type__c) = &quot;Member&quot; &amp;&amp; TEXT(Gender__c) = &quot;Female&quot;, &quot;her&quot;, IF(TEXT (Participant_Enrollee_Type__c) = &quot;Member&quot; &amp;&amp; TEXT(Gender__c) = &quot;Male&quot;, &quot;his&quot;, &quot;his/her&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status his/her</label>
    <type>Text</type>
</CustomField>