force-app/main/default/objects/Participant__c/fields/TAX_ID__c.field-meta.xml
<CustomField>
    <fullName>TAX_ID__c</fullName>
    <label>TAX ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>