force-app/main/default/objects/Participant__c/recordTypes/Enrollee_Contact.recordType-meta.xml
<RecordType>
    <fullName>Enrollee_Contact</fullName>
    <active>true</active>
    <label>Enrollee Contact</label>
</RecordType>