force-app/main/default/objects/Participant__c/recordTypes/Entity_Contact.recordType-meta.xml
<RecordType>
    <fullName>Entity_Contact</fullName>
    <active>false</active>
    <label>Entity Contact</label>
</RecordType>