force-app/main/default/objects/Participant__c/validationRules/DOB_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_In_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Birth__c  &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Date Of Birth cannot be a future date.</errorMessage>
</ValidationRule>