force-app/main/default/objects/Participant__c/validationRules/Fax_Number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Fax_Number_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( ISBLANK(  Fax__c  )),
    NOT (REGEX( Fax__c  , &quot;\\d{10}&quot;) )

)</errorConditionFormula>
    <errorDisplayField>Fax__c</errorDisplayField>
    <errorMessage>Letters are not allowed and Fax Number Should not Exceed 10 Digit</errorMessage>
</ValidationRule>