force-app/main/default/objects/Participant__c/validationRules/Mobile_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( ISBLANK(Mobile__c)),
    NOT (REGEX(   Mobile__c  , &quot;\\d{10}&quot;) )

)</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Mobile number should be 10 digits and Letters are not allowed</errorMessage>
</ValidationRule>