force-app/main/default/objects/Participant__c/validationRules/ZipCode_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ZipCode_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( ISBLANK(  Zip_Code__c  )),
    NOT (REGEX( Zip_Code__c  , &quot;\\d{5}&quot;) )

)</errorConditionFormula>
    <errorMessage>Invalid ZipCode</errorMessage>
</ValidationRule>