force-app/main/default/objects/Participant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Participant_Enrollee_Type__c</columns>
    <columns>Insurance_ID__c</columns>
    <columns>Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>